--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Syed Imadi</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">"Teamwork Makes the Dream Work!"</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>"This is an excerpt"</p>
                 </div>
                 <div class="clear"></div>
               </li>
