Jordan Bacon Page

--- a/index.html
+++ b/index.html
@@ -105,15 +105,16 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/Jordan_Bacon.html">Jordan Bacon</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">"Do or do not, there is no try"
+</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Very Long Story</p>
                 </div>
                 <div class="clear"></div>
               </li>
