--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/Aaron_Briscoe_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                    <img width="304" height="304" class="prof-image" src="/Users/jordanbacon/Documents/Career/Flatiron School/deploy-on-day-1-houston-web-062419/img/Aaron_Briscoe_Veggie_Wrap.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
@@ -108,12 +108,12 @@
                       <a href="students/Aaron_Briscoe_name.html">Aaron Briscoe</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Be Different</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Thunderous Applause!</p>
                 </div>
                 <div class="clear"></div>
               </li>
