--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Thunderous Applause!</p>
+                  <p>100% Certified Fresh on Rotten Tomatoes!</p>
                 </div>
                 <div class="clear"></div>
               </li>
